--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://user_node_cafe:1RNYahB5jJce7NF3@cluster0.bkgoo.mongodb.net/cafeDB
+
+USER=user_node_cafe
+PASS=1RNYahB5jJce7NF3
