updating from spanish to english

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,5 @@
-PORT=8080
-MONGODB_CNN=
+PORT=4000
+MONGODB_CNN=mongodb+srv://raulmoya:kVD3pty6RSA2O0gO@cluster0.kv5nk.mongodb.net/test?authSource=admin&replicaSet=atlas-77zv9s-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 SECRETORPRIVATEKEY=
 
 GOOGLE_CLIENT_ID=
